style: prevent text wrapping in popover target spans

--- a/style.css
+++ b/style.css
@@ -429,4 +429,5 @@ header {
 
 span[popovertarget] {
   cursor: pointer;
+  white-space: nowrap;
 }
